--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   firebase_core: ^2.25.0
   cloud_firestore: ^4.15.0
   firebase_auth: ^4.17.0
+  fluttertoast: ^8.2.4
+  flutter_bloc: ^8.1.5
 
 dev_dependencies:
   flutter_test:
