--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   firebase_auth: ^4.17.0
   fluttertoast: ^8.2.4
   flutter_bloc: ^8.1.5
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
